--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p, ul, li, h2 {
+  margin: 0;
+  padding: 0;
+
+}
+
+
